CIR-I4153 | back button overlap issue fixed

--- a/src/components/commonCss/style.scss
+++ b/src/components/commonCss/style.scss
@@ -4487,7 +4487,11 @@ body {
     min-width: 50px;
   }
 
-  margin: -42px 80px 10px 0;
+  margin: -43px 110px 10px 0;
+
+  @media screen and (max-width: $max1367) {
+    margin: -43px 80px 10px 0;
+  }
 
   &.rm-row {
     margin-top: 0;
